# covid-19-tracker

./: .gitignore  AutoUpdate.py  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker_logs.sh  launcher.sh  main.py  pyproject.toml  requirements.txt  utils.py
cogs/: AutoUpdate.py  Datacmds.py  DiscordBotList.py  Help.py  News.py  auto_update.py  slash_commands.py  statistics.py  topgg.py
data/: datas.json  datas.pickle  datas.py  news.json  news.pickle  parsed_csv.json  populations.csv  time_series_19-covid-Confirmed.csv  time_series_19-covid-Deaths.csv  time_series_19-covid-Recovered.csv
src/: __init__.py  country_code.py  database.py  plotting.py  utils.py
src/commands/: __init__.py  data.py  help.py
